second dataset added

--- a/weblog/templates/index.html
+++ b/weblog/templates/index.html
@@ -90,6 +90,12 @@
         </div>
       </div>
     </div>
+    <div class="container w-75 p-3 table-bordered table-hover">
+      <div class="alert alert-success" role="alert">
+        <h4 class="alert-heading">Best Quote:</h4>
+        <p> <h5>{{ res5 }}</h5> </p>
+      </div>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
